# wipi-web-api

./: Cargo.toml  README.md  justfile  setcap.sh
scripts/: set_ifmode.rb  set_ifstate.rb
src/: error.rs  main.rs
src/api/: auth_status.rs  login.rs  logout.rs  mod.rs
src/api/net/: ifmode.rs  ifstate.rs  interfaces.rs  mod.rs
src/extractor/: mod.rs  router_client.rs  user_session.rs
src/service/: auth.rs  mod.rs  netlink.rs
src/service/netlink/: interface.rs  mod.rs  route.rs  wiphy.rs
