[package]
name = "wipi-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["net", "rt", "rt-multi-thread"] }
axum = "0.8.7"
env_logger = "0.11.8"
log = "0.4.29"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
argon2 = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
